# backend/src/controller/UserController.ts
@@ -6,13 +6,21 @@ import {UserService} from "../service/UserService";
 @Route("User")
 export class UserController extends Controller {
 
-    @Get("getById/{userId}")
-    public async getUser(@Path() userId: string): Promise<IUser> {
-        return await new UserService().getById(userId);
+    private service = new UserService();
+    
+
+    @Get("{userId}")
+    public async get(@Path() userId: string) : Promise<IUser> {
+        return await this.service.getById(userId);
+    }
+
+    @Get()
+    public async getAll() : Promise<IUser[]> {
+        return await this.service.getAll();
     }
 
     @Post("create")
-    public async create(@Body() body: CreateIUserProps): Promise<IUser> {
-        return await new UserService().create(body as CreateIUserProps);
+    public async create(@Body() body: CreateIUserProps) : Promise<IUser> {
+        return await this.service.create(body as CreateIUserProps);
     }
 }
