# backend/src/types/IChannel.ts
@@ -1,4 +1,5 @@
 import {IBaseEntry} from "./IBaseEntry";
+import { IEntryId } from "./IEntryId";
 import {IUser} from "./IUser";
 
 export interface IChannel extends IBaseEntry {
@@ -6,7 +7,6 @@ export interface IChannel extends IBaseEntry {
     creators: IUser[];
     description: string;
 }
-
 
 export type CreateIChannelProps = Pick<IChannel
     , "name"
@@ -21,4 +21,17 @@ export type CreateIChannel = Pick<IChannel
     | "description"
     | "creationDate"
     | "updateDate"
+>;
+
+
+export interface IChannelKey extends IBaseEntry {
+    name: string;
+    creators: IEntryId[];
+    description: string;
+}
+
+export type IChannelKeyProps = Pick<IChannelKey
+    , "name"
+    | "creators"
+    | "description"
 >;
