# backend/src/types/IEntryId.ts
@@ -1,0 +1,6 @@
+
+export interface IEntryId {
+    id: string;
+}
+
+export type CreateIEntryIdProps = Pick<IEntryId, "id">;
