# backend/src/types/IGroup.ts
@@ -1,12 +1,12 @@
 import {IBaseEntry} from "./IBaseEntry";
 import {IUser} from "./IUser";
+import {IEntryId} from "./IEntryId"
 
 export interface IGroup extends IBaseEntry {
     name: string;
     admins: IUser[];
     members: IUser[];
 }
-
 
 export type CreateIGroupProps = Pick<IGroup
     , "name"
@@ -21,4 +21,17 @@ export type CreateIGroup = Pick<IGroup
     | "members"
     | "creationDate"
     | "updateDate"
+>;
+
+
+export interface IGroupKey extends IBaseEntry {
+    name: string;
+    admins: IEntryId[];
+    members: IEntryId[];
+}
+
+export type IGroupKeyProps = Pick<IGroupKey
+    , "name"
+    | "admins"
+    | "members"
 >;
