# backend/src/types/IPost.ts
@@ -1,16 +1,16 @@
 import {IBaseEntry} from "./IBaseEntry";
 import {IUser} from "./IUser";
 import {IPublisher} from "./IPublisher";
+import { IEntryId } from "./IEntryId";
 
 export interface IPost extends IBaseEntry {
     title: string;              // Title of Post
     publisher: IPublisher;      // Channel or user that publishes the post
     creator: IUser;             // Person who writes if publisher is IUser creator = publisher
     editors: IUser[];           // All persons who ever edited the post
-    images: object[];           // Images that are been used in post
+    images: string[];           // Images that are been used in post
     text: string;               // Actual post content. // TODO: Maybe change to file
 }
-
 
 export type CreateIPostProps = Pick<IPost
     , "title"
@@ -31,4 +31,23 @@ export type CreateIPost= Pick<IPost
     | "text"
     | "creationDate"
     | "updateDate"
+>;
+
+
+export interface IPostKey extends IBaseEntry {
+    title: string;              // Title of Post
+    publisher: IPublisher;      // Channel or user that publishes the post
+    creator: IEntryId;          // Person who writes if publisher is IUser creator = publisher
+    editors: IEntryId[];        // All persons who ever edited the post
+    images: string[];           // Images that are been used in post
+    text: string;               // Actual post content. // TODO: Maybe change to file
+}
+
+export type IPostKeyProps = Pick<IPostKey
+    , "title"
+    | "publisher"
+    | "creator"
+    | "editors"
+    | "images"
+    | "text"
 >;
